Fixed z-index issues on mobile

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -100,6 +100,7 @@ input[type=button]:hover, input[type=submit]:hover {
 	height: 0%;
 	overflow: hidden;
 	text-align: center;
+    z-index: 5;
 }
 .lightbox h3 {
 	font-size: 200%;
@@ -334,7 +335,7 @@ img.emoji {
     padding-top: 0.4em;
     padding-right: 0.33em;
     font-size: 16px;
-    z-index: 4;
+    z-index: 8;
 }
 .user-menu .icon {
 	opacity: 0.75;
@@ -577,7 +578,7 @@ form.search {
     width: 100%;
 	box-shadow: 0px 2px 2px rgba(0,0,0,0.15);
    	background: white;
-	z-index: 4;
+	z-index: 8;
 }
 .emojis {
 	font-size: 42px;
